# InscriptionPerplexity

./: pyproject.toml
inscription/: README.md  inscription.db  inscription.db-journal  pyproject.toml
inscription/scripts/: inscription_recorder.py  inscription_recorder_desktop.py  inscription_review.py
inscription/src/inscription/: __init__.py
inscription/src/inscription.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
inscription/src/inscription/capture/: __init__.py  capture_models.py  coordinator.py  session_controller.py
inscription/src/inscription/domain/: enums.py
inscription/src/inscription/infrastructure/: __init__.py  keyboard_pynput.py  mouse_pynput.py  windows_adapters.py  windows_screenshot.py  windows_window_focus.py
inscription/src/inscription/storage/: __init__.py  repository.py  sqlite_store.py
inscription/tests/: test_capture_coordinator.py  test_keyboard_pynput  test_models.py  test_session_controller.py  test_windows_adapters.py
src/inscription/domain/: models.py
src/inscription/storage/: repository.py
tests/: test_storage.py
